UnifyNetSDK/haikang/hk_playsdk_wrapper.py


# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 488
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetPictureSize", "cdecl"):
    PlayM4_GetPictureSize = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetPictureSize", "cdecl")
    PlayM4_GetPictureSize.argtypes = [LONG, POINTER(LONG), POINTER(LONG)]
    PlayM4_GetPictureSize.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 489
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetFileEndCallback", "cdecl"):
    PlayM4_SetFileEndCallback = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetFileEndCallback", "cdecl")
    PlayM4_SetFileEndCallback.argtypes = [LONG, CFUNCTYPE(UNCHECKED(None), c_long, POINTER(None)), POINTER(None)]
    PlayM4_SetFileEndCallback.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 490
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetFileTotalTime", "cdecl"):
    PlayM4_GetFileTotalTime = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetFileTotalTime", "cdecl")
    PlayM4_GetFileTotalTime.argtypes = [LONG, POINTER(PLAYM4_SYSTEM_TIME), POINTER(PLAYM4_SYSTEM_TIME)]
    PlayM4_GetFileTotalTime.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 491
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetSupplementaryTimeZone", "cdecl"):
    PlayM4_SetSupplementaryTimeZone = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetSupplementaryTimeZone", "cdecl")
    PlayM4_SetSupplementaryTimeZone.argtypes = [c_int, c_int]
    PlayM4_SetSupplementaryTimeZone.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 492
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetSupplementaryTimeZone", "cdecl"):
    PlayM4_GetSupplementaryTimeZone = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetSupplementaryTimeZone", "cdecl")
    PlayM4_GetSupplementaryTimeZone.argtypes = [c_int, POINTER(c_int)]
    PlayM4_GetSupplementaryTimeZone.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 493
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetTimeZoneInfo", "cdecl"):
    PlayM4_GetTimeZoneInfo = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetTimeZoneInfo", "cdecl")
    PlayM4_GetTimeZoneInfo.argtypes = [c_long, POINTER(c_int)]
    PlayM4_GetTimeZoneInfo.restype = c_int

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 494
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetStreamInfo", "cdecl"):
    PlayM4_GetStreamInfo = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetStreamInfo", "cdecl")
    PlayM4_GetStreamInfo.argtypes = [c_long, POINTER(c_int), POINTER(c_int)]
    PlayM4_GetStreamInfo.restype = c_int

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 495
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetSourceBufferRemain", "cdecl"):
    PlayM4_GetSourceBufferRemain = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetSourceBufferRemain", "cdecl")
    PlayM4_GetSourceBufferRemain.argtypes = [LONG]
    PlayM4_GetSourceBufferRemain.restype = DWORD

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 496
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_ResetSourceBuffer", "cdecl"):
    PlayM4_ResetSourceBuffer = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_ResetSourceBuffer", "cdecl")
    PlayM4_ResetSourceBuffer.argtypes = [LONG]
    PlayM4_ResetSourceBuffer.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 497
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetSourceBufCallBack", "cdecl"):
    PlayM4_SetSourceBufCallBack = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetSourceBufCallBack", "cdecl")
    PlayM4_SetSourceBufCallBack.argtypes = [LONG, DWORD, CFUNCTYPE(UNCHECKED(None), c_long, DWORD, POINTER(None), POINTER(None)), POINTER(None), POINTER(None)]
    PlayM4_SetSourceBufCallBack.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 498
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_ResetSourceBufFlag", "cdecl"):
    PlayM4_ResetSourceBufFlag = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_ResetSourceBufFlag", "cdecl")
    PlayM4_ResetSourceBufFlag.argtypes = [LONG]
    PlayM4_ResetSourceBufFlag.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 499
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_ResetBuffer", "cdecl"):
    PlayM4_ResetBuffer = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_ResetBuffer", "cdecl")
    PlayM4_ResetBuffer.argtypes = [LONG, DWORD]
    PlayM4_ResetBuffer.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 500
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetBufferValue", "cdecl"):
    PlayM4_GetBufferValue = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetBufferValue", "cdecl")
    PlayM4_GetBufferValue.argtypes = [LONG, DWORD]
    PlayM4_GetBufferValue.restype = DWORD

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 501
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetDisplayBuf", "cdecl"):
    PlayM4_SetDisplayBuf = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetDisplayBuf", "cdecl")
    PlayM4_SetDisplayBuf.argtypes = [LONG, DWORD]
    PlayM4_SetDisplayBuf.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 502
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetDisplayBuf", "cdecl"):
    PlayM4_GetDisplayBuf = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetDisplayBuf", "cdecl")
    PlayM4_GetDisplayBuf.argtypes = [LONG]
    PlayM4_GetDisplayBuf.restype = DWORD

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 503
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetJpegQuality", "cdecl"):
    PlayM4_SetJpegQuality = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetJpegQuality", "cdecl")
    PlayM4_SetJpegQuality.argtypes = [c_long]
    PlayM4_SetJpegQuality.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 504
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetBMP", "cdecl"):
    PlayM4_GetBMP = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetBMP", "cdecl")
    PlayM4_GetBMP.argtypes = [LONG, PBYTE, DWORD, POINTER(DWORD)]
    PlayM4_GetBMP.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 505
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetJPEG", "cdecl"):
    PlayM4_GetJPEG = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetJPEG", "cdecl")
    PlayM4_GetJPEG.argtypes = [LONG, PBYTE, DWORD, POINTER(DWORD)]
    PlayM4_GetJPEG.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 506
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_ConvertToBmpFile", "cdecl"):
    PlayM4_ConvertToBmpFile = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_ConvertToBmpFile", "cdecl")
    PlayM4_ConvertToBmpFile.argtypes = [String, c_long, c_long, c_long, c_long, String]
    PlayM4_ConvertToBmpFile.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 507
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_ConvertToJpegFile", "cdecl"):
    PlayM4_ConvertToJpegFile = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_ConvertToJpegFile", "cdecl")
    PlayM4_ConvertToJpegFile.argtypes = [String, c_long, c_long, c_long, c_long, String]
    PlayM4_ConvertToJpegFile.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 508
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetIdemuxPara", "cdecl"):
    PlayM4_SetIdemuxPara = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetIdemuxPara", "cdecl")
    PlayM4_SetIdemuxPara.argtypes = [LONG, c_int]
    PlayM4_SetIdemuxPara.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 509
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetSecretKey", "cdecl"):
    PlayM4_SetSecretKey = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetSecretKey", "cdecl")
    PlayM4_SetSecretKey.argtypes = [LONG, LONG, String, LONG]
    PlayM4_SetSecretKey.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 510
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_ThrowBFrameNum", "cdecl"):
    PlayM4_ThrowBFrameNum = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_ThrowBFrameNum", "cdecl")
    PlayM4_ThrowBFrameNum.argtypes = [LONG, DWORD]
    PlayM4_ThrowBFrameNum.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 511
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetDecCBStream", "cdecl"):
    PlayM4_SetDecCBStream = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetDecCBStream", "cdecl")
    PlayM4_SetDecCBStream.argtypes = [LONG, DWORD]
    PlayM4_SetDecCBStream.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 512
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetDecodeFrameType", "cdecl"):
    PlayM4_SetDecodeFrameType = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetDecodeFrameType", "cdecl")
    PlayM4_SetDecodeFrameType.argtypes = [LONG, DWORD]
    PlayM4_SetDecodeFrameType.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 513
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_CheckDiscontinuousFrameNum", "cdecl"):
    PlayM4_CheckDiscontinuousFrameNum = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_CheckDiscontinuousFrameNum", "cdecl")
    PlayM4_CheckDiscontinuousFrameNum.argtypes = [LONG, BOOL]
    PlayM4_CheckDiscontinuousFrameNum.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 514
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SkipErrorData", "cdecl"):
    PlayM4_SkipErrorData = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SkipErrorData", "cdecl")
    PlayM4_SkipErrorData.argtypes = [LONG, BOOL]
    PlayM4_SkipErrorData.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 515
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetDecCallBackMend", "cdecl"):
    PlayM4_SetDecCallBackMend = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetDecCallBackMend", "cdecl")
    PlayM4_SetDecCallBackMend.argtypes = [LONG, CFUNCTYPE(UNCHECKED(None), c_long, String, c_long, POINTER(FRAME_INFO), POINTER(None), POINTER(None)), POINTER(None)]
    PlayM4_SetDecCallBackMend.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 516
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetDecCallBackExMend", "cdecl"):
    PlayM4_SetDecCallBackExMend = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetDecCallBackExMend", "cdecl")
    PlayM4_SetDecCallBackExMend.argtypes = [LONG, CFUNCTYPE(UNCHECKED(None), c_long, String, c_long, POINTER(FRAME_INFO), POINTER(None), POINTER(None)), String, c_long, POINTER(None)]
    PlayM4_SetDecCallBackExMend.restype = BOOL
